--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Madeline Meyers Portfolio
 description: My Github Pages Homepage.
+favicon: "assets/img/icons8-github-30.png"
 theme: jekyll-theme-cayman
